# InvoiceAgent

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  alembic.ini  build_package.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  task_breakdown.md
.github/workflows/: build.yml  lint.yml  publish.yml  test.yml
.notes/: design_decisions.md  implementation_roadmap.md  invoice_agent_prd.md  project_plan.md  task_breakdown.md  technical_architecture.md
docs/: api_reference.md  command_reference.md  configuration.md  developer_guide.md  publishing_guide.md  user_guide.md
invoiceagent/ai/: __init__.py  models.py  ollama_client.py  work_processor.py
invoiceagent/ai/templates/: invoice_item_generation.json  invoice_item_generation.txt  invoice_summary.json  invoice_summary.txt  work_log_processing.json  work_log_processing.txt
invoiceagent/cli/: __init__.py  ai_commands.py  client_commands.py  db_commands.py  invoice_commands.py  main.py  project_commands.py  utils.py  work_log_commands.py
invoiceagent/config/: __init__.py
invoiceagent/db/: __init__.py  engine.py  models.py
invoiceagent/db/migrations/: env.py
invoiceagent/db/migrations/versions/: eeafe92257f6_initial_schema.py  fb4bbda83082_initial_schema.py
invoiceagent/db/repositories/: __init__.py  base.py  client.py  invoice.py  project.py  work_log.py
invoiceagent/export/: pdf_generator.py  template_manager.py
invoiceagent/templates/invoice_configs/: default.json
tests/: __init__.py  test_models.py
