[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invoiceagent"
version = "0.1.0"
description = "A lightweight, AI-powered CLI application for managing clients, tracking work, generating invoices, and exporting to PDF"
readme = "README.md"
authors = [
    {name = "Pritish Mishra", email = "pritish.mishra@protonmail.ch"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Freelancers, Contractors, Consultants",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]
keywords = ["invoice", "freelance", "consulting", "billing", "client", "ai"]
requires-python = ">=3.10"
dependencies = [
    "alembic==1.13.1",
    "cachetools==5.3.2",
    "click==8.1.7",
    "httpx==0.26.0",
    "jinja2==3.1.3",
    "pydantic==2.6.4",
    "python-dateutil==2.8.2",
    "reportlab==4.0.8",
    "rich==13.7.0",
    "SQLAlchemy==2.0.27",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.0.30",
]

[project.scripts]
invoiceagent = "invoiceagent.cli.main:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/invoiceagent"
"Bug Tracker" = "https://github.com/yourusername/invoiceagent/issues"
"Documentation" = "https://github.com/yourusername/invoiceagent/tree/main/docs"

[tool.setuptools]
packages = ["invoiceagent"]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.package-data]
invoiceagent = [
    "templates/*.html",
    "templates/css/*.css",
    "templates/js/*.js",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
